--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "originx",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-three/drei": "^10.6.1",
-    "@react-three/fiber": "^9.2.0",
-    "@types/three": "^0.178.1",
-    "dotenv": "^17.2.1",
-    "framer-motion": "^12.23.9",
-    "lucide-react": "^0.526.0",
-    "next": "15.4.4",
-    "openai": "^4.104.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "three": "^0.178.0",
-    "ws": "^8.16.0",
-    "zustand": "^5.0.6"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/ws": "^8.5.10",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.4",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "originx",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+    },
+    "dependencies": {
+      "@react-three/drei": "^10.6.1",
+      "@react-three/fiber": "^9.2.0",
+      "@types/three": "^0.178.1",
+      "dotenv": "^17.2.1",
+      "framer-motion": "^12.23.9",
+      "lucide-react": "^0.526.0",
+      "next": "15.4.4",
+      "openai": "^4.104.0",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "three": "^0.178.0",
+      "ws": "^8.16.0",
+      "zustand": "^5.0.6"
+    },
+    "devDependencies": {
+      "@eslint/eslintrc": "^3",
+      "@types/node": "^20",
+      "@types/react": "^19",
+      "@types/react-dom": "^19",
+      "@types/ws": "^8.5.10",
+      "autoprefixer": "^10.4.17",
+      "eslint": "^9",
+      "eslint-config-next": "15.4.4",
+      "postcss": "^8.4.35",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+    }
 }
